# signal-nomos

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  flake.nix
src/: lib.rs
tests/: round_trip.rs
