[package]
name="signal-nomos"
version="0.2.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/signal-nomos"
description="Typed wire contract for the Nomos transformation daemon"
[dependencies]
rkyv={version="0.8",features=["bytecheck"]}
signal-sema-storage={git="https://github.com/LiGoldragon/signal-sema-storage.git",rev="4fa7256fe5bfe6d4d85b3acceb028d3ae529f6ef"}
thiserror="2"
[lints.rust]
unsafe_code="forbid"
